# HarmonyAIcompain

./: .gitignore  api.py  brain.py  build-profile.json5  config.py  local.properties  main.py  memory.py  model.py  pyproject.toml  scheduler_task.py  server.py  settings.local.json
AppScope/: app.json5
AppScope/app/: app.json5  resources.index.json
AppScope/resources/base/element/: string.json
entry/: build-profile.json5
entry/src/main/: module.json5
entry/src/main/ets/components/: TabBar.ets
entry/src/main/ets/entrybackupability/: EntryBackupAbility.ets
entry/src/main/ets/pages/: DecisionPage.ets  Index.ets  InsightsPage.ets  MemoryPage.ets
entry/src/main/ets/services/: ApiService.ets  BehaviorCollector.ets  DatabaseSchema.ets  FtsSearch.ets  HomeDetector.ets  MemoryService.ets  NetworkMonitor.ets  OfflineQueue.ets  PatternMiner.ets  PredictionService.ets  PushScheduler.ets  SyncOrchestrator.ets  SyncService.ets
entry/src/main/ets/theme/: Theme.ets
entry/src/main/module/: module.json5
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: backup_config.json  main_pages.json
hvigor/: hvigor-config.json5
