[project]
name = "ai-companion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "chromadb>=0.4.0",
    "fastapi>=0.138.0",
    "openai>=2.43.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "uvicorn>=0.49.0",
]
